
- If there are several search results in one line, clicking the line in
  the HyperSearch Results window now selects all occurrences, not just
  the first one.

- If regular expressions are on, the search bar now shows an error
  message instead of silently failing if you attempt a reverse search
  with S+ENTER (reverse search with regular expressions is not
  supported).

}}}
{{{ Bug Fixes

- Fixed international keys on MacOS X.

- "Multiple results" button in the HyperSearch Results window did not
  work correctly.

- Line number shown in status bar when matching brackets was off by one.

- Fixed some usability issues with the "Search in selection" setting in
  the Find dialog box.

- Directory search settings were being reset when a search flag was
  changed.

- Fixed handling of space bar which could result in extra spaces being
  inserted when using dead keys.

- Fixed NullPointerException sometimes thrown when scrolling to the line
  after the last visible line with electric scrolling switched off.

- Fixed problems such as ArrayIndexOutOfBoundsExceptions or the
  beginning of the buffer becoming inaccessible when expanding the last
  fold in a buffer.

- Pressing ENTER at the end of a collapsed fold line now properly
  expands the fold.

- Setting indentOpenBrackets and indentCloseBrackets to ( and ) didn't
  work, this broke Lisp auto indent.

- When text editing moves the caret out of the visible region, jEdit
  only scrolls the text area if its active, so that editing with a split
  view does not scroll the inactive text area's caret into the visible
  region. However the logic for handling this case in jEdit 4.2 was
  flawed and even selecting a command from a menu would not cause
  scrolling.

- "Searching..." message in HyperSearch window did not go away if the
  file set contained no files.

- jEdit will no longer fail to start if the user properties file could
  not be loaded.

- Fixed a few cosmetic bugs in the Global Options dialog box.
